<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_circle"
            android:icon="@drawable/ic_menu_circle"
            android:title="@string/nav_circle" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/test" />
        <item
            android:id="@+id/personal_post"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/personal_post" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/account_info">
        <menu>
            <item
                android:id="@+id/nav_reset"
                android:icon="@drawable/account_reset"
                android:title="@string/reset_psw" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/account_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
